--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
+    "@vitejs/plugin-react": "^5.0.4",
     "vite": "^7.1.7"
   }
 }
